--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,19 +1,21 @@
 .header {
-  &__wrapper__img {
+  &__wrapper-img {
     display: flex;
     justify-content: center;
     padding: 1.3rem 0 0.5rem 0;
   }
 }
 
-.header__wrapper__search {
-  background-color: rgb(240, 240, 240);
+.header__wrapper-search {
+  background-color: rgb(230, 230, 230);
   display: flex;
   justify-content: center;
   align-items: center;
   height: 3rem;
-  box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px inset;
-  color: rgb(78, 78, 78);
+  box-shadow: rgb(0 0 0 / 15%) 0px 3px 8px inset;
+  color: rgb(48, 48, 48);
+  font-size: 1rem;
+
   i {
     padding-right: 1rem;
   }
