partie functioning ok + transition ok

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -26,7 +26,12 @@ body {
   color: white;
   background: linear-gradient(180deg, #FF79DA, #9356DC);
   cursor: pointer;
-  box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 8px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 8px;
+}
+.btn:hover {
+  opacity: 0.8;
+  box-shadow: rgba(0, 0, 0, 0.6) 0px 5px 8px;
+  transition-duration: 0.5s;
 }
 
 /* Layout */
@@ -48,6 +53,55 @@ body {
 }
 .header__wrapper-search i {
   padding-right: 1rem;
+}
+
+.functioning {
+  padding: 3.8rem 1.5rem;
+}
+.functioning__title {
+  padding-bottom: 2rem;
+}
+.functioning__list {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.functioning__item {
+  background: #f0f0f0;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 8px;
+  margin-bottom: 1.8rem;
+  display: flex;
+  position: relative;
+  padding: 1.75rem;
+  border-radius: 1.3rem;
+  transition-duration: 1s;
+}
+.functioning__item:hover {
+  background-color: #f5edff;
+}
+.functioning__item:hover .functioning__item__wrapper-icon {
+  color: #9356DC;
+  transition-duration: 1s;
+}
+.functioning__item__number {
+  background-color: #9356DC;
+  color: white;
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 1rem;
+  left: -0.7rem;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8rem;
+}
+.functioning__item__wrapper-icon {
+  padding-right: 1rem;
+  color: grey;
+}
+.functioning__item__wrapper-icon i {
+  font-size: 1.1rem;
 }
 
 .footer {
@@ -79,7 +133,7 @@ body {
 
 /* Pages */
 .informations {
-  background: #eeeeee;
+  background: #f0f0f0;
   height: 20rem;
   padding: 3rem 1.5rem;
   display: flex;
