--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -8,5 +8,11 @@
     color: white;
     background: linear-gradient(180deg, $colour-secondary, $colour-primary);
     cursor: pointer;
-    box-shadow: rgb(0 0 0 / 50%) 0px 3px 8px;
+    box-shadow: rgb(0 0 0 / 30%) 0px 5px 8px;
+
+    &:hover {
+      opacity: 0.8;
+      box-shadow: rgb(0 0 0 / 60%) 0px 5px 8px;
+      transition-duration: 0.5s;
+    }
   }
