--- a/src/sass/layout/_functioning.scss
+++ b/src/sass/layout/_functioning.scss
@@ -1,5 +1,5 @@
 .functioning {
-  padding: 3.8rem 1.5rem;
+  padding: 3.5rem 1.5rem;
 
   &__title {
     padding-bottom: 2rem;
@@ -8,25 +8,29 @@
   &__list {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
   }
 
   &__item {
-    background: rgb(240, 240, 240);
+    background: rgb(246, 246, 246);
     box-shadow: rgb(0 0 0 / 15%) 0px 3px 8px;
     margin-bottom: 1.8rem;
     display: flex;
     position: relative;
     padding: 1.75rem;
     border-radius: 1.3rem;
-    transition-duration: 1s;
+    transition-duration: 0.5s;
+
+    p {
+        font-weight: 500;
+        font-size: 1rem;
+    }
 
     &:hover {
       background-color: rgb(245, 237, 255);
 
       .functioning__item__wrapper-icon {
         color: $colour-primary;
-        transition-duration: 1s;
+        transition-duration: 0.5s;
       }
     }
 
@@ -45,7 +49,7 @@
     }
 
     &__wrapper-icon {
-      padding-right: 1rem;
+      width: 2.5rem;
       color: grey;
 
       i {
