--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,18 +1,20 @@
 .btn {
-    padding: 1rem;
-    margin: auto;
-    border-radius: 2rem;
-    border-style: none;
-    font-size: 1.1rem;
-    font-weight: lighter;
-    color: white;
-    background: linear-gradient(180deg, $colour-secondary, $colour-primary);
-    cursor: pointer;
-    box-shadow: rgb(0 0 0 / 30%) 0px 5px 8px;
+  padding: 1rem;
+  margin: auto;
+  border-radius: 2rem;
+  border-style: none;
+  font-size: 1.1rem;
+  font-weight: lighter;
+  color: white;
+  background: linear-gradient(180deg, $colour-secondary, $colour-primary);
+  cursor: pointer;
+  outline: none;
+  box-shadow: rgb(0 0 0 / 30%) 0px 5px 8px;
 
-    &:hover {
-      opacity: 0.8;
-      box-shadow: rgb(0 0 0 / 60%) 0px 5px 8px;
-      transition-duration: 0.5s;
-    }
+
+  &:hover {
+    opacity: 0.8;
+    box-shadow: rgb(0 0 0 / 60%) 0px 5px 8px;
+    transition-duration: 0.5s;
   }
+}
