restaurants ok + fix bouton new, reste coeur

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,12 +12,14 @@
 /* Components */
 
 @import "./components/buttons";
+@import "./components/card";
 
 
 /* Layout */
 
 @import "./layout/header";
 @import "./layout/functioning";
+@import "./layout/restaurants";
 @import "./layout/footer";
 
 /* Pages */
