--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,5 +1,5 @@
 .informations {
-  background: rgb(246, 246, 246);
+  background: $backgroung-grey;
   height: 20rem;
   padding: 3rem 1.5rem;
   display: flex;
