--- a/src/sass/layout/_functioning.scss
+++ b/src/sass/layout/_functioning.scss
@@ -11,7 +11,7 @@
   }
 
   &__item {
-    background: rgb(246, 246, 246);
+    background: $backgroung-grey;
     box-shadow: rgb(0 0 0 / 15%) 0px 3px 8px;
     margin-bottom: 1.8rem;
     display: flex;
