--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -35,6 +35,21 @@ body {
   transition-duration: 0.5s;
 }
 
+.restaurants .card {
+  background-color: white;
+  border-radius: 1rem;
+  margin-bottom: 1rem;
+  height: 17.5rem;
+  position: relative;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 8px;
+}
+.restaurants .card .icone-heart {
+  position: absolute;
+  right: 2rem;
+  bottom: 2.1rem;
+  font-size: 1.6rem;
+}
+
 /* Layout */
 .header__wrapper-img {
   display: flex;
@@ -108,6 +123,46 @@ body {
   font-size: 1.1rem;
 }
 
+.restaurants {
+  padding: 3.5rem 1.5rem;
+  background-color: #f6f6f6;
+}
+.restaurants__title {
+  padding-bottom: 1.5rem;
+}
+.restaurants img {
+  width: 100%;
+  height: 70%;
+  object-fit: cover;
+  border-radius: 1rem 1rem 0 0;
+}
+.restaurants .button-new {
+  /*z-index: 1;*/
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  background-color: #99E2D0;
+  color: green;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  font-weight: 500;
+  border-radius: 0.2rem;
+}
+.restaurants .card__description {
+  padding: 1rem;
+}
+.restaurants .card__description span {
+  color: black;
+  font-size: 1.1rem;
+  font-weight: bold;
+}
+.restaurants .card__description p {
+  color: black;
+  font-size: 1.1rem;
+  font-weight: 200;
+  padding-top: 0.3rem;
+}
+
 .footer {
   background-color: #353535;
   color: white;
@@ -152,10 +207,6 @@ body {
   padding-bottom: 3rem;
   font-size: 1.1rem;
   font-weight: lighter;
-}
-
-.restaurants img {
-  width: 90%;
 }
 
 /*# sourceMappingURL=style.css.map */
