--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -1,5 +1,4 @@
 .restaurants {
-
   .card {
     background-color: white;
     border-radius: 1rem;
@@ -9,15 +8,23 @@
     box-shadow: rgb(0 0 0 / 15%) 0px 3px 8px;
 
     .icone-heart {
-        position: absolute;
-        right: 2rem;
-        bottom: 2.1rem;
-        font-size: 1.6rem;
-        color: black;
+      position: absolute;
+      right: 2rem;
+      bottom: 2.1rem;
+      font-size: 1.6rem;
+      /*coeur de base transparent*/
+      color: transparent;
+      /*je rajoute les bords*/
+      -webkit-text-stroke: 2px black;
 
-        :hover {
-            background: linear-gradient(0deg, $colour-secondary, $colour-primary);
-        }
+      &:hover {
+        /*background sur tout le fond*/
+        background: linear-gradient(0deg, $colour-secondary, $colour-primary);
+        /*background seulement dans le coeur*/
+        -webkit-background-clip: text;
+        /*j'enlève la bordure noir du coeur*/
+        -webkit-text-stroke: transparent;
+      }
     }
   }
 }
