session flo: fix creation input ok + sortie du header ok

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -18,5 +18,18 @@
 
   i {
     padding-right: 1rem;
+    color: #353535;
+  }
+
+  input {
+    background-color: rgb(234, 234, 234);
+    border: none;
+    padding: 0.5rem;
+    font-size: 1rem;
+    font-weight: bold;
+  }
+
+  input::placeholder {
+    color: #353535;
   }
 }
