--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -6,6 +6,28 @@
   position: relative;
   box-shadow: rgb(0 0 0 / 15%) 0px 3px 8px;
 
+  /*.icone-heart {
+      position: absolute;
+      right: 2rem;
+      bottom: 2.1rem;
+      font-size: 1.6rem;
+      /*coeur de base couleur noir dans html fas au lieu de far --> transparent*/
+  /*color: transparent;
+      /*je rajoute les bords*/
+  /*-webkit-text-stroke: 2px black;
+
+      &:hover {
+        /*background sur tout le fond*/
+  /*background: linear-gradient(0deg, $colour-secondary, $colour-primary);
+        /*background seulement dans le coeur*/
+  /*propriété de base et en plus celle avec le préfixe*/
+  /*background-clip: text;
+        -webkit-background-clip: text;
+        /*j'enlève la bordure noir du coeur*/
+  /*-webkit-text-stroke: transparent;
+      }
+    }*/
+
   .white {
     z-index: 1;
     background-color: white;
