--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19,17 +19,17 @@ body {
 
 /* Components */
 .btn {
-  padding: 1rem;
+  padding: 1rem 1.2rem;
   margin: auto;
   border-radius: 2rem;
   border-style: none;
   font-size: 1.1rem;
-  font-weight: lighter;
-  color: white;
   background: linear-gradient(180deg, #FF79DA, #9356DC);
-  cursor: pointer;
   outline: none;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 5px 8px;
+}
+.btn a {
+  color: white;
 }
 .btn:hover {
   opacity: 0.8;
@@ -44,6 +44,27 @@ body {
   height: 17.5rem;
   position: relative;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 8px;
+  /*.icone-heart {
+      position: absolute;
+      right: 2rem;
+      bottom: 2.1rem;
+      font-size: 1.6rem;
+      /*coeur de base couleur noir dans html fas au lieu de far --> transparent*/
+  /*color: transparent;
+      /*je rajoute les bords*/
+  /*-webkit-text-stroke: 2px black;
+
+      &:hover {
+        /*background sur tout le fond*/
+  /*background: linear-gradient(0deg, $colour-secondary, $colour-primary);
+        /*background seulement dans le coeur*/
+  /*propriété de base et en plus celle avec le préfixe*/
+  /*background-clip: text;
+        -webkit-background-clip: text;
+        /*j'enlève la bordure noir du coeur*/
+  /*-webkit-text-stroke: transparent;
+      }
+    }*/
 }
 .card .white {
   z-index: 1;
