fix erreur btn html validator + modif loader ok

--- a/src/sass/components/_loader.scss
+++ b/src/sass/components/_loader.scss
@@ -2,7 +2,7 @@
   &__section {
     width: 100vw;
     height: 100vh;
-    background-color: rgba(236, 253, 247, 0.9);
+    background-color: rgb(255, 255, 255, 1);
     z-index: 10;
     /*position: absolute;*/
     position: fixed;
