--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,7 +1,7 @@
 /* style spécifique à certaine pages */
 
 .informations {
-  background: $backgroung-grey;
+  background: $background-primary;
   height: 20rem;
   padding: 3rem 1.5rem;
   display: flex;
