--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,4 +1,5 @@
 $colour-primary: #9356DC;
 $colour-secondary: #FF79DA;
 $colour-tertiary: #99E2D0;
-$backgroung-grey:rgb(246, 246, 246);
+$background-primary:rgb(246, 246, 246);
+$inset: inset;
