--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -4,7 +4,7 @@
   margin-bottom: 1rem;
   height: 17.5rem;
   position: relative;
-  box-shadow: rgb(0 0 0 / 15%) 0px 3px 8px;
+  @include box-shadow-card;
 
   /*.icone-heart {
       position: absolute;
