--- a/src/sass/layout/_restaurants.scss
+++ b/src/sass/layout/_restaurants.scss
@@ -1,6 +1,6 @@
 .restaurants {
   padding: 3.5rem 1.5rem;
-  background-color: $backgroung-grey;
+  background-color: $background-primary;
 
   &__title {
     padding-bottom: 1.5rem;
