début première page la palette du goût

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,4 +1,4 @@
-/* style spécifique à certaine pages */
+/* style spécifique à certaines pages */
 
 .informations {
   background: $background-primary;
