--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -15,3 +15,11 @@
     transition-duration: 0.5s;
   }
 }
+
+.header__return {
+  font-size: 1.4rem;
+  position: absolute;
+  top: 1.5rem;
+  left: 1rem;
+  color: black;
+}
