début la palette du gout et coeur probleme

--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -28,7 +28,7 @@
       }
     }*/
 
-  .white {
+  /*.white {
     z-index: 1;
     background-color: white;
     position: absolute;
@@ -51,5 +51,5 @@
     background: linear-gradient(0deg, $colour-secondary, $colour-primary);
     background-clip: text;
     -webkit-background-clip: text;
-  }
+  }*/
 }
