--- a/src/sass/components/_heart.scss
+++ b/src/sass/components/_heart.scss
@@ -1,24 +1,27 @@
 .white {
-    z-index: 1;
-    background-color: white;
-    position: absolute;
-    right: 2rem;
-    bottom: 2.1rem;
-    font-size: 1.6rem;
-    color: black;
+  z-index: 1;
+  background-color: white;
+  position: absolute;
+  right: 2rem;
+  bottom: 2.1rem;
+  font-size: 1.6rem;
+  color: white;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-stroke: 2px black;
 
-    &:hover {
-      opacity: 0;
-      transition-duration: 1s;
-    }
+  &:hover {
+    opacity: 0;
+    transition-duration: 1s;
   }
-  .colored {
-    position: absolute;
-    right: 2rem;
-    bottom: 2.1rem;
-    font-size: 1.6rem;
-    color: transparent;
-    background: linear-gradient(0deg, $colour-secondary, $colour-primary);
-    background-clip: text;
-    -webkit-background-clip: text;
-  }
+}
+.colored {
+  position: absolute;
+  right: 2rem;
+  bottom: 2.1rem;
+  font-size: 1.6rem;
+  color: transparent;
+  background: linear-gradient(0deg, $colour-secondary, $colour-primary);
+  background-clip: text;
+  -webkit-background-clip: text;
+}
