--- a/src/sass/pages/_restaurants.scss
+++ b/src/sass/pages/_restaurants.scss
@@ -1,34 +1,29 @@
-.menus {
-    width: 100%;
-    height: 10rem;
-    border-radius: 3rem 3rem 0 0;
-    background-color: $background-primary;
-    position: absolute;
-    top: 20rem;
-    padding: 2rem 1.5rem;
-
-    &__title {
-        font-style: oblique 10deg;
-        font-family: 'Shrikhand';
-        font-size: 1.8rem;
-        font-weight: 500;
-    }
-
-}
-
 .header__img-restaurant {
-    width: 100%;
-    height: 20rem;
-    z-index: -1;
-    object-fit: cover;
-}
-.menus_relative {
-    width: 100%;
-    height: 2rem;
-    position: relative;
+  width: 100%;
+  height: 20rem;
+  z-index: -1;
+  object-fit: cover;
 }
 
+.menus {
+  width: 100%;
+  height: 10rem;
+  border-radius: 3rem 3rem 0 0;
+  background-color: $background-primary;
+  position: absolute;
+  top: 20rem;
+  padding: 2rem 1.5rem;
+
+  &__title {
+    font-style: oblique 10deg;
+    font-family: "Shrikhand";
+    font-size: 1.8rem;
+    font-weight: 500;
+  }
+}
 
 .icone-heart {
-    /*position: relative;*/
+  position: relative;
+  top: 1.5rem;
+  left: 1.5rem;
 }
