--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -2,3 +2,4 @@ $colour-primary: #9356DC;
 $colour-secondary: #FF79DA;
 $colour-tertiary: #99E2D0;
 $background-primary:rgb(246, 246, 246);
+$stroke-color:linear-gradient(0deg, $colour-secondary, $colour-primary);
