--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -379,7 +379,7 @@ body {
 
 .menus {
   width: 100%;
-  height: 10rem;
+  /*height: 10rem;*/
   border-radius: 3rem 3rem 0 0;
   background-color: #f6f6f6;
   position: absolute;
@@ -397,6 +397,39 @@ body {
   position: relative;
   top: 1.5rem;
   left: 1.5rem;
+}
+
+.enter h2 {
+  font-weight: lighter;
+  font-size: 1.1rem;
+  text-transform: uppercase;
+  padding-top: 2.5rem;
+  padding-bottom: 0.5rem;
+}
+.enter__bar {
+  width: 3rem;
+  height: 0.26rem;
+  background-color: #99E2D0;
+}
+.enter__wrapper-p {
+  width: 80%;
+}
+.enter__title {
+  padding-bottom: 0.7rem;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+ul {
+  padding-top: 1.2rem;
+}
+ul li {
+  background-color: white;
+  border-radius: 1rem;
+  padding: 0.7rem;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 8px;
+  display: flex;
+  margin-bottom: 1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
