--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -21,6 +21,7 @@
 
 @import "./components/buttons";
 @import "./components/card";
+@import "./components/check";
 @import "./components/heart";
 @import "./components/loader";
 
