--- a/src/sass/pages/_restaurants.scss
+++ b/src/sass/pages/_restaurants.scss
@@ -45,16 +45,28 @@
 
   &__wrapper-p {
     width: 80%;
+    /*afficher ...(ellipsis)*/
+    /*text-overflow: ellipsis;*/
+    /*permet de cacher le texte qui sort de la boîte*/
+    /*overflow: hidden;*/
+    /*ne pas wraper le texte*/
+    /*white-space: nowrap;*/
   }
 
   &__title {
     padding-bottom: 0.7rem;
     font-size: 1.2rem;
     font-weight: 500;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
   }
 
   &__description {
     font-weight: 300;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
   }
 
   &__card {
